--- a/demo/index.html
+++ b/demo/index.html
@@ -2,9 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>demo</title>
 </head>
+<link rel="stylesheet" href="../demo/css/dasdsa.css">
 <body>
-
+<div id="head">
+     <span>欢迎来到Green</span>
+     <span>请先
+         <a href="#"  >登录</a>
+         <a href="#" >注册</a>
+     </span>
+    <span>
+        <a href="#">购物车</a>
+         <a href="#">我的订单</a>
+         <a href="#">我的收藏</a>
+         <a href="#">企业支持</a>
+    </span>
+</div>
+<div>
+     <img src="img/logo.jpg" id="logo">
+     <input type="search" placeholder="盆栽" id="sousuo">
+     <img src="../demo/img/sousuo.jpg" id="anniu">
+    <div id="tishi">
+    <ul>
+        <li>热门搜索：</li>
+        <li><a href="">绿萝</a> </li>
+        <li><a href="">绿萝</a> </li>
+        <li><a href="">绿萝</a> </li>
+        <li><a href="">绿萝</a> </li>
+        <li><a href="">绿萝</a> </li>
+    </ul>
+    </div>
+</div>
 </body>
 </html>
